# roomba

./: .gitignore  CLAUDE.md  README.md  create.py  game.py  pyproject.toml  starwars.py
src/create_serial/: __init__.py  cli.py  create.py  game.py  starwars.py
tests/: test_create.py  test_find_port.py  test_sensor_frame.py  test_starwars.py  test_utils.py
